plugins {
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

ext {
    springBootVersion = '3.2.4'
    springdocVersion = '2.3.0'
}

allprojects {
    group = 'com.tastyhouse'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }
}

bootJar {
    enabled = false
}

configure(subprojects.findAll { it.name != 'domain' && it.path != ':infrastructure' }) {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }

    ext['commons-lang3.version'] = '3.18.0'

    ext['netty.version'] = '4.1.137.Final'

    ext['jackson-bom.version'] = '2.21.6'

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

project(':domain') {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

